# tradingSystem

./: .gitignore  IMPLEMENTATION_PLAN.md
trading-platform/: .env.example  COMPLETION_BANNER.txt  HYBRID_ENGINE_ARCHITECTURE.md  INSTITUTIONAL_IMPLEMENTATION.md  INSTITUTIONAL_UPGRADE_ROADMAP.md  PRODUCTION.md  PROJECT_SUMMARY.md  README.md  TECHNICAL_AND_FUNCTIONAL_SPEC.md  context.md  docker-compose.yml  pyproject.toml  start-backend.bat  start_app.bat
trading-platform/.github/workflows/: ci.yml
trading-platform/backend/: Dockerfile  alembic.ini
trading-platform/backend/alembic/: README
trading-platform/backend/alembic/versions/: 20260514_0001_initial.py
trading-platform/backend/app/: main.py
trading-platform/backend/app/api/: deps.py
trading-platform/configs/: agents.yml  fusion.yml  strategies.yml
trading-platform/configs/features/: default.yml
trading-platform/database/migrations/: 001_angelone_schema.sql
trading-platform/frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
trading-platform/frontend/app/: layout.tsx
trading-platform/frontend/components/: FuturesDashboard.tsx  LiveQuoteBar.tsx  MarketDepth.tsx  OptionChain.tsx  OrderPanel.tsx  PortfolioPanel.tsx  TradingViewChart.tsx
trading-platform/frontend/lib/: api.ts  ws.ts
trading-platform/frontend/store/: marketSlice.ts  optionsSlice.ts  ordersSlice.ts  portfolioSlice.ts
trading-platform/grafana/dashboards/: ticks-ingestion.json
trading-platform/scripts/: quick_start.py  run_backtest.py  seed_historical_data.py  train_rl_agent.py
trading-platform/services/scrapling_intelligence_service/: Dockerfile  __init__.py  config.py  core_fetcher.py  pipeline.py  requirements.txt  service.py  signal_generator.py
(+171 files in other folders)
