[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-platform"
version = "0.1.0"
description = "Advanced India + Crypto Algorithmic Trading Platform"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.3.4,<3.0.0",
  "structlog>=24.2.0,<25.0.0",
  "sqlalchemy>=2.0.31,<3.0.0",
  "asyncpg>=0.29.0,<1.0.0",
  "redis>=5.0.8,<6.0.0",
  "httpx>=0.27.0,<1.0.0",
  "websockets>=12.0,<14.0",
  "alembic>=1.13.2,<2.0.0",
  "pandas>=2.2.2,<3.0.0",
  "numpy>=1.26.4,<3.0.0",
  "PyYAML>=6.0.1,<7.0.0",
  "apscheduler>=3.10.4,<4.0.0",
  "ccxt>=4.3.0,<5.0.0",
  "kiteconnect>=5.0.1,<6.0.0",
  "jugaad-data>=0.26,<1.0.0",
  "nsepy>=0.8,<1.0.0",
  "qlib",
  "vectorbt",
  "quantstats",
  "mlflow",
  "smartapi-python>=1.4.3",
  "tenacity>=8.5.0,<10.0.0",
  "pyotp>=2.9.0,<3.0.0",
  "scipy>=1.13.0,<2.0.0",
  "aiosqlite>=0.20.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2,<9.0.0",
  "pytest-asyncio>=0.23.8,<1.0.0",
  "mypy>=1.11.1,<2.0.0",
  "ruff>=0.5.6,<1.0.0",
]

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/app/tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
mypy_path = "backend"
packages = ["app"]

